external-crates/move/crates/move-compiler/tests/move_check/parser/struct_native_missing_semicolon.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_native_missing_semicolon.move:3:1
  │
3 │ }
  │ ^ Unexpected '}'. Expected struct fields, 'has' to start abilities declaration, or ';' for a native struct

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_native_missing_semicolon.move:4:1
  │
4 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'
